# Mars_Caterpillar_2026

./: README.md  ZED_Tools_Ubuntu22.run  frames_2025-10-28_21.59.30.gv  frames_2025-12-17_09.32.14.gv  frames_2025-12-22_13.15.28.gv  frames_2025-12-22_13.20.37.gv  frames_2025-12-22_14.11.02.gv  frames_2025-12-22_19.43.46.gv
src/action_server_cpp/: CMakeLists.txt  package.xml
src/action_server_cpp/action/: Manipulator.action
src/action_server_cpp/src/: manipulator_server.cpp
src/aruco_detector/: package.xml  setup.py
src/aruco_detector/aruco_detector/: aruco_detector_node.py  zone_b.py
src/caterpillar_bringup/: package.xml  setup.py
src/caterpillar_bringup/bt/: bt.xml  bt6.xml  bt9.xml
src/caterpillar_bringup/caterpillar_bringup/: odom_to_base_link.py
src/caterpillar_bringup/config/: ekf.yaml  nav2.rviz  nav2_params.yaml  nav2_paramsu.yaml
src/caterpillar_bringup/launch/: camera.launch.py  check_odom.launch.py  nav2.launch.py  navigation.launch.py  odom.launch.py  robot.launch.py  rviz.launch.py  vslam.launch.py
src/caterpillar_bringup/rviz/: nav2.rviz
src/custom_bt_plugins/: CMakeLists.txt  package.xml  plugin.xml
src/custom_bt_plugins/plugin/: plugin.xml
src/custom_bt_plugins/src/: start_hardcoded_excavate_dump.cpp  start_task_bt_node.cpp  time_remaining.cpp  wait_and_save_aruco_pose.cpp
src/joy_control/: CMakeLists.txt
src/joy_control/src/: joy_control_node.cpp
src/logger_pkg/: package.xml  setup.py
src/logger_pkg/launch/: log_and_bag.launch.py
src/logger_pkg/logger_pkg/: logging_node.py
src/mars_navigation/: CMakeLists.txt  package.xml
src/mars_navigation/config/: bt_navigate.xml  nav2_params.yaml
src/mars_navigation/launch/: nav2.launch.py
src/realsense_vslam/: package.xml  setup.cfg  setup.py
src/realsense_vslam/launch/: setup.launch.py  setup_align.launch.py
src/realsense_vslam/realsense_vslam/: opencv_heatmap.py  voxel_costmap_node.py
