<?xml version="1.0"?>
<package format="3">

  <name>custom_bt_plugins</name>
  <version>0.0.1</version>

  <description>
    Custom Nav2 Behavior Tree plugins
  </description>

  <maintainer email="fida@example.com">Fida</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>nav2_behavior_tree</build_depend>
  <build_depend>behaviortree_cpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>aruco_msgs</build_depend>
  <build_depend>action_server_cpp</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>nav2_behavior_tree</exec_depend>
  <exec_depend>behaviortree_cpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>aruco_msgs</exec_depend>
  <exec_depend>action_server_cpp</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
